--- a/docs/specification/bg-design.tex
+++ b/docs/specification/bg-design.tex
@@ -231,7 +231,7 @@
       
       \noindent
       Note that these should be considered flexible placeholders; they can
-      be changed to suit future constraints without little or no impact.
+      be changed to suit future constraints with little or no impact.
 
 \item \XCID is intended to be agnostic wrt. implementation for a given host 
       core.  As such, there is no conceptual reason preventing use within
