--- a/docs/specification/intro.tex
+++ b/docs/specification/intro.tex
@@ -8,12 +8,12 @@ b) form a central target in what is a complex, evolving attack surface.
 The former is a particular issue, in the sense cryptography is typically an
 enabling technology vs. a feature per se: from the perspective of the user,
 it represents pure overhead.  Efficiency is a goal in and of itself then, 
-but also as an enabler for security: one cannot (or at least {\em should} 
+but also as an enabler for security.  One cannot (or at least {\em should} 
 not) compromise security to meet efficiency requirements, and so delivering
 higher efficiency can be pitched as an enabler for countermeasures against 
 attack (since there is more margin in which to do so).
 
-This document acts as a specification for a 
+This document acts as the specification for a 
 greenfield, non-standard extension~\cite[Section 21.1]{SCARV:RV:ISA:I:17} 
 to the RISC-V 
 RV32I~\cite[Section 2]{SCARV:RV:ISA:I:17} (or RV32E~\cite[Section 3]{SCARV:RV:ISA:I:17})
@@ -43,6 +43,6 @@ or
 ``\XCID does Y''
 should be carefully qualified with {\em currently} vs. {\em definitively}.  
 In particular, we expect some degree of iteration and so change to emerge 
-from ongoing implementation and evaluation effort.
+from work in progress wrt. design, implementation, and evaluation.
 
 % =============================================================================
