--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -120,22 +120,18 @@
 \end{bytefield}
 \end{figure}}
 
-
 % For multi-line autoflowed table cells
 \newcolumntype{Y}{>{\RaggedRight\arraybackslash}X}
-
 
 % =============================================================================
 
 \newcommandx{\RVXLEN}{\mbox{XLEN}\xspace}
 \newcommandx{\RVCUSTOM}[1]{\mbox{\em custom-#1}\xspace}
 
-
-
 % ISE name
-\newcommandx{\ISE}{{\sf XCrypto}\xspace}
+\newcommandx{\ISE}{{\sf XCrypto}\xspace} % TODO: remove
 % Co-processor name
-\newcommandx{\COP}{\ISE Co-Processor}
+\newcommandx{\COP}{\ISE Co-Processor}    % TODO: remove
 
 % -----------------------------------------------------------------------------
 
@@ -189,7 +185,7 @@
 % algorithm
 \newcommandx{\ALG}[1]{\textsc{#1}}
 % instruction operand
-\newcommandx{\OPER}[1]{\mbox{\tt #1}}
+\newcommandx{\OPER}[1]{\mbox{\tt #1}} % TODO: remove
 % index in object
 \newcommandx{\INDEX}[3][1={}]{\ensuremath{{#2}_{#3}^{#1}}\xspace}
 % field in object
@@ -258,7 +254,8 @@
 \newcommandx{\RNG}{{\ensuremath{\sf RNG}}\xspace}
 \newcommandx{\MEM}[3][1={},2={},3={}]{{\ensuremath\IfEq{#1}{*}{{\sf  MEM}[{#2}]^{#3}}{{\sf   MEM}}}\xspace}
 \newcommandx{\GPR}[2][1={},2={}     ]{{\ensuremath\IfEq{#1}{*}{{\sf  GPR}[{#2}]     }{{\sf   GPR}}}\xspace}
-\newcommandx{\CPR}[2][1={},2={}     ]{{\ensuremath\IfEq{#1}{*}{{\sf  CPR}[{#2}]     }{{\sf   CPR}}}\xspace}
+\newcommandx{\CPR}[2][1={},2={}     ]{{\ensuremath\IfEq{#1}{*}{{\sf  CPR}[{#2}]     }{{\sf   CPR}}}\xspace} % TODO: remove
+\newcommandx{\XCR}[2][1={},2={}     ]{{\ensuremath\IfEq{#1}{*}{{\sf  XCR}[{#2}]     }{{\sf   CPR}}}\xspace}
 \newcommandx{\SPR}[3][     2={},3={}]{{\ensuremath\IfEq{#2}{*}{{\sf   #1}[{#3}]     }{{\sf    #1}}}\xspace}
 % references
 \newcommandx{\SEC}[1][1={}]{\IfEq{#1}{s}{Sections}{Section}\xspace}
